--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
                     </div>
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
-                data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
             </button>
@@ -89,6 +88,26 @@
             </button>
         </div>
     </header>
+    <main class="mt-2">
+        <section>
+            <div class="we-offer">
+                <img class="img-fluid" src="images/design-img/design-1.png" alt="">
+                <div class="text-center p-5">
+                    <h2 class="fs-1">What we offer</h2>
+                    <p class="fs-5">Kidzo mission is to provide affordable, high-quality early education and childcare
+                        services for
+                        working families to ensure every child.</p>
+
+                </div>
+                <img class="img-fluid" src="images/design-img/design-2.png" alt="">
+            </div>
+            <div class="setion-img">
+                <img src="images/baner/Graphic-1.png" alt="">
+                <img src="images/baner/Graphic-2.png" alt="">
+            </div>
+
+        </section>
+    </main>
 
     <!-- boostrap js -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
