--- a/index.html
+++ b/index.html
@@ -101,9 +101,16 @@
                 </div>
                 <img class="img-fluid" src="images/design-img/design-2.png" alt="">
             </div>
-            <div class="setion-img">
-                <img src="images/baner/Graphic-1.png" alt="">
-                <img src="images/baner/Graphic-2.png" alt="">
+            <div class="we-offer-setion-img container">
+                <div class="Graphic-1">
+                    <img src="images/baner/Graphic-1.png" alt="">
+                    <h2>Intace Care</h2>
+                </div>
+
+                <div class="Graphic-2">
+                    <img src="images/baner/Graphic-2.png" alt="">
+                    <h2>Pre School Sports</h2>
+                </div>
             </div>
 
         </section>
