--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                 <div class="carousel-item" data-bs-interval="2000">
                     <img src="images/baner/baner-2.jpg" class="d-block w-100" alt="...">
                     <div class="carousel-caption d-md-block">
-                        <h1>PRE SCHOOL FOR YOUR CHILD</h1>
+                        <h1 class="text-white">PRE SCHOOL FOR YOUR CHILD</h1>
                     </div>
                 </div>
                 <div class="carousel-item" data-bs-interval="2000">
@@ -77,7 +77,8 @@
                     </div>
                 </div>
             </div>
-            <button class="carousel-control-prev" type="button" data-bs-slide="prev">
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark"
+                data-bs-slide="prev">
                 <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                 <span class="visually-hidden">Previous</span>
             </button>
