--- a/index.html
+++ b/index.html
@@ -107,14 +107,16 @@
                     <img src="images/baner/Graphic-1.png" alt="">
                     <h2>Intace Care</h2>
                 </div>
-
                 <div class="Graphic-2">
                     <img src="images/baner/Graphic-2.png" alt="">
                     <h2>Pre School Sports</h2>
+                    <img id="car" src="images/design-img/design-4.png" alt="">
                 </div>
+
             </div>
 
         </section>
+
     </main>
 
     <!-- boostrap js -->
