--- a/index.html
+++ b/index.html
@@ -112,9 +112,39 @@
                     <h2>Pre School Sports</h2>
                     <img id="car" src="images/design-img/design-4.png" alt="">
                 </div>
-
             </div>
-
+        </section>
+        <section class="container mx-auto mt-5 pt-5">
+            <div class="text-center w-100">
+                <div class="w-50 mx-auto">
+                    <h2 class="fs-1 text-info">educational Program</h2>
+                    <p class="fs-5">Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolorum pariatur, tempore
+                        ea
+                        cumque expedita
+                    </p>
+                    <img src="" alt="">
+                </div>
+            </div>
+            <div class="education-program ">
+                <div style="background-color: #00afff;">
+                    <img src="images/baner/card-1.png" alt="">
+                    <h2>Pre-school Sports</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, accusamus.
+                    </p>
+                </div>
+                <div style="background-color: #695ffe;">
+                    <img src="images/baner/card-2.png" alt="">
+                    <h2>Pre-school Sports</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, accusamus.
+                    </p>
+                </div>
+                <div style="background-color: #f42478;">
+                    <img src="images/baner/card-3.png" alt="">
+                    <h2>Pre-school Sports</h2>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Animi, accusamus.
+                    </p>
+                </div>
+            </div>
         </section>
 
     </main>
@@ -123,6 +153,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
+    <script src="app.js"></script>
 </body>
 
 </html>
